<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>dynamixel_workbench_toolbox</name>
  <version>0.1.8</version>
  <description>
    This package is composed of 'dynamixel_item', 'dynamixel_tool', 'dynamixel_driver' and 'dynamixel_workbench' class.
    The 'dynamixel_item' is saved as control table item and information of Dynamixels.
    The 'dynamixel_tool' class loads its by model number of Dynamixels.
    The 'dynamixel_driver' class includes wraped function used in DYNAMIXEL SDK.
    The 'dynamixel_workbench' class make simple to use Dynamixels
  </description>
  <license>Apache License 2.0</license>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/dynamixel-workbench/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/dynamixel-workbench</url>
  <url type="website">http://wiki.ros.org/dynamixel_workbench</url>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <export>
    <bitbots_documentation>
      <status>stable</status>
      <language>c++</language>
    </bitbots_documentation>
    <build_type>ament_cmake</build_type>
  </export>
</package>
